--- a/view/pages/index.html
+++ b/view/pages/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Timestamp Microservice</title>
-	<link rel="stylesheet" href="../../public/stylesheets/main.css">
+	<link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body>
 	<h1>Timestamp microservice --A simple API service</h1>
