--- a/view/pages/index.html
+++ b/view/pages/index.html
@@ -16,14 +16,14 @@
 	<h3>Some Example:</h3>
 	<p>
 		Input: 
-		<pre>	https://timestamp-ms.herokuapp.com/December%2015,%202015
-	https://timestamp-ms.herokuapp.com/1450137600</pre>
+		<pre>	https://simpleapiserver.herokuapp.com/December%2015,%202015
+	https://simpleapiserver.herokuapp.com/1450137600</pre>
 		Output: 
 		<pre>	{ "unix": 1450137600, "natural": "December 15, 2015" }</pre>
 	</p>
 	<p>
 		Input: 
-		<pre>	https://timestamp-ms.herokuapp.com/test
+		<pre>	https://simpleapiserver.herokuapp.com/test
 	https://timestamp-ms.herokuapp.com/null</pre>
 		Output: 
 		<pre>	{"unix":null,"natural":null}</pre>
